objects/UNITY_Invoice_Line_Item__c.object
<CustomObject>
    <description>UNITY Invoice line items</description>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product must have the Miner Record Type</errorMessage>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Miner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Activity_Type__c</fullName>
        <description>The line activity type</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UNITY_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Holiday Labor</fullName>
                </value>
                <value>
                    <fullName>Holiday Travel</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Overtime Travel</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - Equipment</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Standard Travel</fullName>
                </value>
                <value>
                    <fullName>Use Tax</fullName>
                </value>
                <value>
                    <fullName>Vendor Double Time Labor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Adjusted_Quantity__c</fullName>
        <label>Adjusted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Holiday_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Holiday Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_OT_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer OT Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount__c</fullName>
        <label>Discount %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Discount_from_PO__c</fullName>
        <description>The discount % on the PO from which the line got originated</description>
        <label>Discount % from PO</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Discounted_Price__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(UNITY_Discount__c)),UNITY_Discount__c&gt;0),
(1-UNITY_Discount__c)*UNITY_Total_Price__c,
IF(
AND(NOT(ISBLANK(UNITY_Discount_Amount__c)),UNITY_Discount_Amount__c&gt;0),
UNITY_Total_Price__c - UNITY_Discount_Amount__c,
UNITY_Total_Price__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Excluded_from_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excluded from Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Final_Discounted_Price__c</fullName>
        <description>Discounted Price including any Discount% applied at the PO level</description>
        <formula>IF(
AND(NOT(ISBLANK(UNITY_Discount_from_PO__c)),UNITY_Discount_from_PO__c&gt;0),
(1-UNITY_Discount_from_PO__c)*UNITY_Discounted_Price__c,
UNITY_Discounted_Price__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discounted Price including any Discount% applied at the PO level</inlineHelpText>
        <label>Final Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_GL_Company__c</fullName>
        <formula>UNITY_Invoice__r.UNITY_GL_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_GL_Revenue_Account__c</fullName>
        <description>The revenue account to post the line to in SL</description>
        <label>GL Revenue Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_GL_Sub_Account__c</fullName>
        <description>The GL Sub Account the line is posted to in SL</description>
        <label>GL Sub Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_GL_Tax_Account__c</fullName>
        <label>GL Tax Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Holiday_Multiplier__c</fullName>
        <label>Holiday Multiplier</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Line_Item_External_Id__c</fullName>
        <description>This field will contain unique record id from source system.</description>
        <externalId>true</externalId>
        <label>UNITY Invoice Line Item External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Status_Formula__c</fullName>
        <formula>TEXT(UNITY_Invoice__r.UNITY_Invoice_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Creation</fullName>
                </value>
                <value>
                    <fullName>Invoice sent for Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Discount - Approved by Manager</fullName>
                </value>
                <value>
                    <fullName>Discount - Rejected by Manager</fullName>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Returned to Agent</fullName>
                </value>
                <value>
                    <fullName>Invoice Amended</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>UNITY_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UNITY_Is_Miner_OT_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Miner OT Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Is_Vendor_Supply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vendor Supply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Line_Status__c</fullName>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Number_of_Techs__c</fullName>
        <label>Number of Techs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Technician</fullName>
                </value>
                <value>
                    <fullName>2 Technicians</fullName>
                </value>
                <value>
                    <fullName>Multi-Tech</fullName>
                </value>
                <value>
                    <fullName>1 Technician + Apprentice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_OT_Multiplier__c</fullName>
        <label>OT Multiplier</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Ownership_Cost__c</fullName>
        <formula>UNITY_Discounted_Price__c +  UNITY_Sales_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_PO_Has_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the PO that generated this line has a discount applied to it.</description>
        <label>PO Has Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_PO_Price__c</fullName>
        <label>PO Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Tax_Code__c</fullName>
        <description>The tax code applied to the invoice line</description>
        <label>Tax Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Type__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Labor - Installation</fullName>
                </value>
                <value>
                    <fullName>Labor - Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Vendor Services</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Stock Receipt (Restocking)</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Unit_Price__c</fullName>
        <formula>UNITY_Total_Price__c /  UNITY_Adjusted_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_Holiday_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Holiday Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Vendor_OT_Multiplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor OT Multiplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_WorkOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Invoice Line Items</relationshipLabel>
        <relationshipName>Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>INVL-{0000}</displayFormat>
        <label>Invoice Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <recordTypes>
        <fullName>UNITY_Invoice_Line_Item</fullName>
        <active>true</active>
        <label>UNITY Invoice Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>UNITY_Agent_Cannot_Save_Manager_Statuses</fullName>
        <active>true</active>
        <description>Agent cannot save the proposal record in manager statuses</description>
        <errorConditionFormula>AND ( 
CONTAINS( $User.Id ,  UNITY_Invoice__r.UNITY_Case__r.OwnerId  ), 
OR( 
ISPICKVAL(  UNITY_Invoice__r.UNITY_Invoice_Status__c  , &apos;Discount - Approved by Manager&apos;), 
ISPICKVAL(  UNITY_Invoice__r.UNITY_Invoice_Status__c , &apos;Discount - Rejected by Manager&apos;), 
ISPICKVAL(  UNITY_Invoice__r.UNITY_Invoice_Status__c , &apos;Invoice sent for Manager Approval&apos;) 

) 
)</errorConditionFormula>
        <errorMessage>Cannot Save record with Status: Manager Approved / Rejected. Please change to the appropriate status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Cancelled_Completed_Restrict</fullName>
        <active>true</active>
        <description>Restrict edit of record from completed or cancelled.</description>
        <errorConditionFormula>AND 
( 
OR( 
ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c  ,&apos;Completed&apos;), 
ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Cancelled&apos;) 
), 
OR( 
ISNEW(), 
ISCHANGED(UNITY_Adjusted_Quantity__c), 
ISCHANGED(UNITY_Cost__c), 
ISCHANGED(UNITY_Discount__c) , 
ISCHANGED(UNITY_Type__c) , 
ISCHANGED(UNITY_PO_Price__c) , 
ISCHANGED(Product__c) , 
ISCHANGED(UNITY_Sales_Tax__c) , 
ISCHANGED(UNITY_Total_Price__c) 
),
NOT($User.Ignore_Validations__c)
)</errorConditionFormula>
        <errorMessage>Record cannot be edited after it has been set to Completed or Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Discount_Edit_Customer_Accept</fullName>
        <active>true</active>
        <description>Restrict changes to the discount fields if Customer Status is Accepted</description>
        <errorConditionFormula>if( 
AND( 
ISPICKVAL(   UNITY_Invoice__r.UNITY_Status__c   ,&apos;Accepted&apos;), 
OR( ISCHANGED( UNITY_Discount__c ), ISCHANGED( UNITY_Discount_Amount__c ) ) 
) 
, true, false)</errorConditionFormula>
        <errorMessage>The Customer has Accepted the Invoice, discount fields cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Discount_Percent_Amount</fullName>
        <active>true</active>
        <description>Ensures that either Amount or % field is used</description>
        <errorConditionFormula>OR ( 
AND (if(UNITY_Discount__c &gt; 0,true,false), if(UNITY_Discount_Amount__c &gt; 0,true,false) ) 
)</errorConditionFormula>
        <errorMessage>Please enter value in one of the two fields: Discount % or Discount Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Invoice_Restrict_Customer_Edit</fullName>
        <active>true</active>
        <description>Restrict customer from editing the Invoice when it is not in &quot;Sent to Customer&quot; status</description>
        <errorConditionFormula>AND(!ISPICKVAL(   UNITY_Invoice__r.UNITY_Invoice_Status__c   , &apos;Sent to Customer&apos;) , if(CONTAINS( $User.ProfileId, &apos;00e18000000Hi5J&apos;),true,false) )</errorConditionFormula>
        <errorMessage>The Invoice is currently being handled by the Agent. The Invoice cannot be edited at this moment. Please contact the Agent for further clarification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Lock_Discount_Fields</fullName>
        <active>true</active>
        <description>Lock discount fields in Sent to customer, Approved Discount, completed or cancelled, from Manager stages</description>
        <errorConditionFormula>OR ( 
if( 
AND( 
OR (ISPICKVAL(  UNITY_Invoice__r.UNITY_Invoice_Status__c  ,&apos;Sent to Customer&apos;), ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Completed&apos;), ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Cancelled&apos;), ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Returned to Agent&apos;),ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Discount - Approved by Manager&apos;)), 
ISCHANGED( UNITY_Discount__c ) 
) 
, true, false), 
if( 
AND( 
OR (ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Sent to Customer&apos;), ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Completed&apos;), ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Cancelled&apos;), ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Returned to Agent&apos;),ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c ,&apos;Discount - Approved by Manager&apos;)), 
ISCHANGED( UNITY_Discount_Amount__c ) 
) 
, true, false) 
)</errorConditionFormula>
        <errorMessage>Discount fields cannot be changed in &apos;Discount - Approved by Manager&apos;, &apos;Sent to Customer&apos;, &apos;Completed&apos;, &apos;Returned to Agent&apos; or &apos;Cancelled&apos; statuses</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Restrict_Agents_Skipping_Approvals</fullName>
        <active>false</active>
        <description>If discount exists and Manger Approved Discount is unchecked, the proposal cannot move into following status: Sent to Customer, Return to Agent, Proposal Completed, Proposal Amended &amp; sent to customer.</description>
        <errorConditionFormula>AND 
( 
OR 
( 
if( UNITY_Discount_Amount__c &gt; 0,true,false), 
if( UNITY_Discount__c &gt; 0,true,false), 
if(  UNITY_Invoice__r.UNITY_Does_Line_Item_Discount_Amt_Exist__c  &gt; 0,true,false), 
if(  UNITY_Invoice__r.UNITY_Line_Item_Discount_Exists__c  &gt; 0,true,false) 
) 
, 
if(  UNITY_Invoice__r.UNITY_Manager_Approved_Discounts__c  = false,true,false) 
, 
OR 
( 
if(ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c , &apos;Sent to Customer&apos;),true,false), 
if(ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c , &apos;Returned to Agent&apos;),true,false), 
if(ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c , &apos;Completed&apos;),true,false) 
) 
)</errorConditionFormula>
        <errorMessage>The Invoice contains discounts. Please submit the Invoice for approval. Please contact the system administrator for more details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Restrict_Invoice_Amended</fullName>
        <active>false</active>
        <description>Cannot move status to Invoice Amended if the Customer status is Accepted</description>
        <errorConditionFormula>AND ( OR (ISPICKVAL(  UNITY_Invoice__r.UNITY_Status__c  , &apos;Accepted&apos;) , AND ( UNITY_Invoice__r.UNITY_Manager_Approved_Discounts__c  = true, ISPICKVAL(UNITY_Invoice__r.UNITY_Status__c,&apos;&apos;) ) ) , 

OR ( ISPICKVAL(  UNITY_Invoice__r.UNITY_Invoice_Status__c  , &apos;Invoice Amended&apos;) , ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c  , &apos;Invoice Creation&apos;) , ISPICKVAL( UNITY_Invoice__r.UNITY_Invoice_Status__c  , &apos;Returned to Agent&apos;)) 
)</errorConditionFormula>
        <errorMessage>The invoice cannot be amended once the customer has Accepted the Invoice or Manager has approved the discount. Please set the status as &apos;Sent to Customer&apos; to continue or Cancel</errorMessage>
    </validationRules>
</CustomObject>